<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="regulo.udacity.popularmovies.activities.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_movies_favorites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <ProgressBar
        android:id="@+id/pb_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:visibility="visible"
        android:layout_height="wrap_content"
        />

</RelativeLayout>
